--- a/andriodApp/app/src/main/res/layout/activity_main.xml
+++ b/andriodApp/app/src/main/res/layout/activity_main.xml
@@ -59,19 +59,27 @@
             android:text="Scrollable Event List"
             tools:ignore="MissingConstraints"
             />
-        <Button
-            android:id="@+id/send_notification"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Send Notification"
-            tools:ignore="MissingConstraints"
-            />
+<!--        <Button-->
+<!--            android:id="@+id/send_notification"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Send Notification"-->
+<!--            tools:ignore="MissingConstraints"-->
+<!--            />-->
 
         <Button
             android:id="@+id/attendee_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Attendee Home"
+            tools:ignore="MissingConstraints"
+            />
+
+        <Button
+            android:id="@+id/Org_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Org Home"
             tools:ignore="MissingConstraints"
             />
 
