--- a/andriodApp/app/src/main/res/layout/activity_main.xml
+++ b/andriodApp/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="105dp"
+        tools:layout_editor_absoluteY="165dp">
+
         <Button
             android:id="@+id/button_create_new_event"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/demo_button_create_new_event"
-            tools:ignore="MissingConstraints"/>
+            tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/button_admin_event_browse"
@@ -26,7 +29,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Admin Event List"
-            tools:ignore="MissingConstraints"/>
+            tools:ignore="MissingConstraints" />
 
 
         <Button
@@ -35,7 +38,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Attendee Event List"
-            tools:ignore="MissingConstraints"/>
+            tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/button_attendee_event_info"
@@ -43,7 +46,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Attendee Event Info"
-            tools:ignore="MissingConstraints"/>
+            tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/button_attendee_event_info_signup"
@@ -51,7 +54,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Attendee Event Info Sign Up"
-            tools:ignore="MissingConstraints"/>
+            tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/button_attendee"
@@ -59,16 +62,16 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Attendees"
-            tools:ignore="MissingConstraints"/>
+            tools:ignore="MissingConstraints" />
 
-<!--        Creat a new button called Create new user-->
+        <!--        Creat a new button called Create new user-->
         <Button
             android:id="@+id/button_create_new_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Create New User"
-            tools:ignore="MissingConstraints"/>
+            tools:ignore="MissingConstraints" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
