--- a/andriodApp/app/src/main/res/layout/org_send_event_notification.xml
+++ b/andriodApp/app/src/main/res/layout/org_send_event_notification.xml
@@ -10,8 +10,8 @@
 
   <ImageView
       android:id="@+id/back_send_notification"
-      android:layout_width="14.21dp"
-      android:layout_height="wrap_content"
+      android:layout_width="wrap_content"
+      android:layout_height="19dp"
       android:layout_marginStart="20dp"
       android:layout_marginTop="17.66dp"
       android:layout_marginEnd="357.76dp"
