implemented share generated QR

--- a/andriodApp/app/src/main/res/layout/container_qr_code_generated_organizer.xml
+++ b/andriodApp/app/src/main/res/layout/container_qr_code_generated_organizer.xml
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="25dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="36.5dp"
+        android:layout_marginStart="36.5dp"
         android:layout_marginTop="-3.5dp"
         android:layout_marginBottom="-3.5dp"
         android:gravity="left|center_vertical"
@@ -54,7 +54,7 @@
       android:id="@+id/qrImage"
       android:layout_width="247dp"
       android:layout_height="match_parent"
-      android:layout_marginLeft="40.94dp"
+      android:layout_marginStart="40.94dp"
       android:layout_marginTop="38.27dp"
       android:layout_marginBottom="37.67dp"
       android:layout_gravity="left"
@@ -64,8 +64,8 @@
       android:id="@+id/image1"
       android:layout_width="57.72dp"
       android:layout_height="54.76dp"
-      android:layout_marginLeft="288.2dp"
-      android:layout_marginRight="0dp"
+      android:layout_marginStart="288.2dp"
+      android:layout_marginEnd="0dp"
       android:layout_marginBottom="294.18dp"
       android:scaleType="centerInside"
       android:src="@drawable/image1" />
@@ -74,8 +74,8 @@
       android:id="@+id/image2"
       android:layout_width="57.72dp"
       android:layout_height="54.76dp"
-      android:layout_marginLeft="288.2dp"
-      android:layout_marginRight="0dp"
+      android:layout_marginStart="288.2dp"
+      android:layout_marginEnd="0dp"
       android:layout_marginTop="294.18dp"
       android:scaleType="centerInside"
       android:src="@drawable/image2" />
@@ -84,8 +84,8 @@
       android:id="@+id/image3"
       android:layout_width="57.72dp"
       android:layout_height="54.76dp"
-      android:layout_marginLeft="5.24dp"
-      android:layout_marginRight="282.96dp"
+      android:layout_marginStart="5.24dp"
+      android:layout_marginEnd="282.96dp"
       android:layout_marginBottom="294.18dp"
       android:scaleType="centerInside"
       android:src="@drawable/image3" />
@@ -94,18 +94,18 @@
       android:id="@+id/image4"
       android:layout_width="57.72dp"
       android:layout_height="54.76dp"
-      android:layout_marginLeft="0dp"
-      android:layout_marginRight="288.2dp"
+      android:layout_marginStart="0dp"
+      android:layout_marginEnd="288.2dp"
       android:layout_marginTop="294.18dp"
       android:scaleType="centerInside"
       android:src="@drawable/image4" />
   </FrameLayout>
   
   <LinearLayout
-    android:id="@+id/container_list_item"
+    android:id="@+id/share_generated_qr"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="116dp"
+    android:layout_marginStart="116dp"
     android:layout_marginTop="48.33dp"
     android:layout_gravity="left"
     android:clipToPadding="false"
@@ -123,7 +123,7 @@
       android:id="@+id/text_share_now"
       android:layout_width="wrap_content"
       android:layout_height="21dp"
-      android:layout_marginLeft="14.29dp"
+      android:layout_marginStart="14.29dp"
       android:gravity="center"
       android:includeFontPadding="false"
       android:maxLines="1"
@@ -137,7 +137,7 @@
     android:id="@+id/container_button"
     android:layout_width="222.88dp"
     android:layout_height="45.61dp"
-    android:layout_marginLeft="5.94dp"
+    android:layout_marginStart="5.94dp"
     android:layout_marginTop="53dp"
     android:layout_gravity="center_horizontal"
     android:background="@drawable/container_button">
