made the layouts more consistent with the figma

--- a/andriodApp/app/src/main/res/layout/attendee_event_info_sign_up.xml
+++ b/andriodApp/app/src/main/res/layout/attendee_event_info_sign_up.xml
@@ -9,40 +9,13 @@
     tools:context=".MainActivity">
 
   <ImageView
-      android:id="@+id/back_attendee_event_info_signup"
-      android:layout_width="14.21dp"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="20dp"
-      android:layout_marginTop="17.66dp"
-      android:layout_marginEnd="357.76dp"
-      android:layout_marginBottom="766.48dp"
-      android:scaleType="centerInside"
-      android:src="@drawable/back_less" />
-
-  <TextView
-      android:id="@+id/container_frame13"
-      android:layout_width="wrap_content"
-      android:layout_height="24dp"
-      android:layout_gravity="top|start"
-      android:layout_marginStart="113dp"
-      android:layout_marginTop="16dp"
-      android:gravity="center_horizontal|center_vertical"
-      android:includeFontPadding="false"
-      android:maxLines="1"
-      android:singleLine="true"
-      android:text="Event Information"
-      android:textColor="#FF1A1A1A"
-      android:textSize="20sp"
-      android:textStyle="bold" />
-
-  <ImageView
       android:id="@+id/poster_attendee_eventInfo"
       android:layout_width="361dp"
       android:layout_height="214dp"
-      android:layout_marginStart="15dp"
-      android:layout_marginTop="57dp"
       android:layout_gravity="top|start"
-      android:scaleType="centerInside"
+      android:layout_marginStart="20dp"
+      android:layout_marginTop="8dp"
+      android:scaleType="centerCrop"
       android:src="@drawable/image_career_fairs_web_banner"
       android:contentDescription="event_poster" />
 
@@ -50,19 +23,32 @@
       android:id="@+id/location_pin_event_info_signup"
       android:layout_width="17.5dp"
       android:layout_height="25dp"
-      android:layout_marginStart="15dp"
-      android:layout_marginTop="275dp"
+      android:layout_marginStart="20dp"
+      android:layout_marginTop="230dp"
       android:layout_gravity="top|start"
       android:scaleType="centerInside"
       android:src="@drawable/location_pin"
       android:contentDescription="map_icon" />
 
   <TextView
+      android:id="@+id/attendee_event_detail_welcome"
+      android:layout_width="358dp"
+      android:layout_height="48dp"
+      android:layout_marginStart="20dp"
+      android:layout_marginTop="265dp"
+      android:gravity="left|top"
+      android:includeFontPadding="false"
+      android:lineHeight="24dp"
+      android:text="👋 Welcome to Career Launchpad 2024! 🚀\n"
+      android:textColor="#FF000000"
+      android:textSize="20sp" />
+
+  <TextView
       android:id="@+id/loc_attendee_eventInfo"
       android:layout_width="wrap_content"
       android:layout_height="17dp"
-      android:layout_marginStart="40dp"
-      android:layout_marginTop="275dp"
+      android:layout_marginStart="45dp"
+      android:layout_marginTop="235dp"
       android:layout_gravity="top|start"
       android:gravity="start|center_vertical"
       android:includeFontPadding="false"
@@ -76,7 +62,7 @@
       android:id="@+id/text_event_info"
       android:layout_width="wrap_content"
       android:layout_height="20dp"
-      android:layout_marginStart="15dp"
+      android:layout_marginStart="20dp"
       android:layout_marginTop="320dp"
       android:layout_gravity="top|start"
       android:gravity="start|center_vertical"
@@ -91,18 +77,20 @@
       android:layout_width="360dp"
       android:layout_height="258dp"
       android:layout_gravity="top|start"
-      android:layout_marginStart="15dp"
+      android:layout_marginStart="20dp"
       android:layout_marginTop="343dp"
       android:background="@drawable/drawable_shape">
 
     <TextView
         android:id="@+id/info_attendee_eventInfo"
-        android:layout_width="360dp"
+        android:layout_width="350dp"
         android:layout_height="258dp"
         android:layout_gravity="bottom|start"
+        android:layout_marginStart="5dp"
         android:gravity="start|top"
         android:includeFontPadding="false"
         android:lineHeight="19sp"
+        android:scrollbars="vertical"
         android:text="CCIS is holding a new event, exiciting"
         android:textColor="#FF000000"
         android:textSize="15sp" />
@@ -157,7 +145,7 @@
       android:src="@drawable/profile" />
 
   <ImageView
-      android:id="@+id/home_admin_browse_attendee"
+      android:id="@+id/home_event_details_attendee"
       android:layout_width="38dp"
       android:layout_height="38dp"
       android:layout_marginStart="172dp"
