--- a/andriodApp/app/src/main/res/layout/attendees_home_page.xml
+++ b/andriodApp/app/src/main/res/layout/attendees_home_page.xml
@@ -118,8 +118,31 @@
       android:scaleType="centerInside"
       android:src="@drawable/home_white"
       android:contentDescription="Button to view attendee's home page" />
+  <RelativeLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="600dp"
+      android:layout_marginStart="310dp"
+      android:layout_marginBottom="16dp">
+    <ImageView
+        android:id="@+id/image_ellipse"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:background="@drawable/image_ellipse"
+        android:scaleType="centerInside" />
 
-  <!--  TODO: Figure out a way to replace show list icon, with the white one to show current tab -->
+    <!--  TODO: Figure out a way to replace show list icon, with the white one to show current tab -->
+    <ImageView
+        android:id="@+id/image_screenshot"
+        android:layout_width="56dp"
+        android:layout_height="46dp"
+        android:layout_gravity="top|left"
+        android:layout_marginTop="4dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/image_screenshot" />
+  </RelativeLayout>
+
+
   <ImageView
       android:id="@+id/event_list"
       android:layout_width="38dp"
