implemented browse image for admin

--- a/andriodApp/app/src/main/res/layout/admin_browse_images.xml
+++ b/andriodApp/app/src/main/res/layout/admin_browse_images.xml
@@ -11,32 +11,31 @@
         android:layout_width="wrap_content"
         android:layout_height="24dp"
         android:layout_gravity="top|start"
-        android:layout_marginStart="163dp"
+        android:layout_marginStart="160dp"
         android:layout_marginTop="16dp"
         android:gravity="center_horizontal|center_vertical"
         android:includeFontPadding="false"
         android:maxLines="1"
         android:singleLine="true"
-        android:text="Image Gallery"
+        android:text="Gallery"
         android:textColor="#FF1A1A1A"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/eventsRecyclerView"
+        android:id="@+id/imgsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="60dp"/>
 
-    <ImageButton
+    <ImageView
         android:id="@+id/back_admin_browse_images"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="21.04dp"
-        android:layout_marginTop="17.66dp"
-        android:layout_marginRight="357.76dp"
-        android:layout_marginBottom="766.48dp"
-        android:scaleType="centerInside"
+        android:layout_width="39dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="24dp"
+        android:contentDescription="@string/back_button_implemented_with_less_then"
+        android:foregroundGravity="left|bottom"
         android:src="@drawable/back_less" />
 
     <ImageView
