--- a/andriodApp/app/src/main/res/layout/item_photo.xml
+++ b/andriodApp/app/src/main/res/layout/item_photo.xml
@@ -8,9 +8,9 @@
 
     <!-- Left side image/icon -->
     <ImageView
-        android:id="@+id/image_banner"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:id="@+id/browser_image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:scaleType="centerCrop"
         android:src="@drawable/image_banner" />
 
