--- a/andriodApp/app/src/main/res/drawable-nodpi/red_button_setup.xml
+++ b/andriodApp/app/src/main/res/drawable-nodpi/red_button_setup.xml
@@ -3,7 +3,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle" >
 	<corners android:radius="5.01dp" />
-	<stroke android:color="#a92ca9" android:width="1dp" />
-	<solid android:color="@color/rectangle_25_color" />
+	<solid android:color="@color/red" />
 </shape>
 
