--- a/andriodApp/app/src/main/res/layout/admin_delete_image.xml
+++ b/andriodApp/app/src/main/res/layout/admin_delete_image.xml
@@ -23,82 +23,76 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:id="@+id/content_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-
+        <LinearLayout
+            android:layout_width="393dp"
+            android:layout_height="807dp"
+            android:orientation="vertical">
             <RelativeLayout
-                android:id="@+id/page_edit_profile_ek1"
+                android:id="@+id/header_delete_image_admin"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="0dp">
+                android:layout_height="wrap_content">
 
-                <View
-                    android:id="@+id/_bg__edit_profile_ek2"
-                    android:layout_width="393dp"
-                    android:layout_height="807dp"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginTop="0dp"
-                    android:background="@drawable/_bg__edit_profile_ek2_shape" />
+                <ImageView
+                    android:id="@+id/back_admin_delete_image"
+                    android:layout_width="39dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="22dp"
+                    android:layout_marginTop="24dp"
+                    android:contentDescription="@string/back_button_implemented_with_less_then"
+                    android:foregroundGravity="left|bottom"
+                    android:src="@drawable/back_less" />
 
 
-                <RelativeLayout
-                    android:id="@+id/profile"
+                <TextView
+                    android:id="@+id/admin_view_image_header"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="29dp"
-                    android:layout_marginTop="27dp">
-
-                    <ImageButton
-                        android:id="@+id/back_admin_delete_image"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="0dp"
-                        android:contentDescription="back_button"
-                        android:src="@drawable/vector" />
-
-                    <TextView
-                        android:id="@+id/admin_view_image_header"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="123dp"
-                        android:layout_marginTop="2dp"
-                        android:text="View Image"
-                        android:textColor="@color/_bg__profile_ek1_color"
-                        android:textSize="20.02sp"
-                        android:textStyle="bold" />
-
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/admin_delete_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="86dp"
-                    android:layout_marginTop="650dp">
-
-                    <Button
-                        android:id="@+id/delete_image"
-                        android:layout_width="222.88dp"
-                        android:layout_height="48dp"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="0dp"
-                        android:background="@drawable/save_shape"
-                        tools:text="Delete Profile" />
-
-
-                </RelativeLayout>
-
-
-
+                    android:layout_marginStart="160dp"
+                    android:layout_marginTop="24dp"
+                    android:text="Image"
+                    android:textColor="@color/_bg__profile_ek1_color"
+                    android:textSize="20.02sp"
+                    android:textStyle="bold" />
             </RelativeLayout>
 
-        </RelativeLayout>
+            <ImageView
+                android:id="@+id/browser_image"
+                android:layout_width="320dp"
+                android:layout_height="320dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="100dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/image_banner" />
+
+            <RelativeLayout
+                android:id="@+id/delete_image_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="100dp"
+                android:layout_gravity="center">
+                <View
+                    android:id="@+id/light_green_button_rect"
+                    android:layout_width="205dp"
+                    android:layout_height="48dp"
+                    android:layout_marginStart="-1dp"
+                    android:layout_marginTop="-1dp"
+                    android:background="@drawable/red_button_setup" />
+                <TextView
+                    android:id="@+id/delete_image_text"
+                    android:layout_width="205dp"
+                    android:layout_height="wrap_content"
+                    android:shadowColor="#000000"
+                    android:shadowDx="0"
+                    android:shadowDy="4"
+                    android:shadowRadius="4"
+                    android:text="Delete"
+                    android:textAlignment="center"
+                    android:textColor="@color/create_event_color"
+                    android:textSize="16.02sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"/>
+            </RelativeLayout>
+        </LinearLayout>
 
     </FrameLayout>
 
