--- a/andriodApp/app/src/main/res/values/colors.xml
+++ b/andriodApp/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="red">#FF0000</color>
 
     <color name="_bg__create_event_ek2_color">#FFFFFF</color>
     <color name="_bg__profile_ek1_color">#000000</color>
