--- a/andriodApp/app/src/main/res/layout/activity_main.xml
+++ b/andriodApp/app/src/main/res/layout/activity_main.xml
@@ -59,14 +59,13 @@
             android:text="Scrollable Event List"
             tools:ignore="MissingConstraints"
             />
-<!--        <Button-->
-<!--            android:id="@+id/send_notification"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Send Notification"-->
-<!--            tools:ignore="MissingConstraints"-->
-<!--            />-->
-
+        <Button
+            android:id="@+id/button_admin_img_browse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Admin Browse Img"
+            tools:ignore="MissingConstraints"/>
         <Button
             android:id="@+id/attendee_home"
             android:layout_width="wrap_content"
