--- a/andriodApp/app/src/main/res/layout/admin_delete_event.xml
+++ b/andriodApp/app/src/main/res/layout/admin_delete_event.xml
@@ -1,130 +1,303 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container_event_information_page"
     android:layout_width="match_parent"
-             android:layout_height="match_parent">
-    <FrameLayout
-        android:layout_width="360dp"
+    android:layout_height="807dp"
+    android:background="@drawable/container_event_information_page"
+    tools:context=".MainActivity">
+
+    <ImageView
+        android:id="@+id/back_attendee_browse_events"
+        android:layout_width="14.21dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|start"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="343dp"
-        android:background="@drawable/drawable_shape">
-
-    </FrameLayout>
-
-
-    <TextView
-        android:id="@+id/continer_event_summary_date_icon1"
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|start"
-        android:gravity="start|top"
-        android:includeFontPadding="false"
-        android:lineHeight="19sp"
-        android:text="Carethe Main Floor Atrium of the Katz Group Centre for Pharmacy and Health Research (KATZ).
-At each of our career fairs, chat with a career advisor for a free 10-minute review of your resume "
-        android:textColor="#FF000000"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.313"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="17.66dp"
+        android:layout_marginEnd="357.76dp"
+        android:layout_marginBottom="766.48dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/back_less" />
 
     <TextView
         android:id="@+id/container_frame13"
         android:layout_width="wrap_content"
         android:layout_height="24dp"
         android:layout_gravity="top|start"
+        android:layout_marginStart="113dp"
+        android:layout_marginTop="16dp"
         android:gravity="center_horizontal|center_vertical"
         android:includeFontPadding="false"
         android:maxLines="1"
         android:singleLine="true"
-        android:text="ADministration Event View"
+        android:text="Event Information"
         android:textColor="#FF1A1A1A"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/bottom_actionbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.437"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.032" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/back_attendee_browse_events"
+        android:id="@+id/image_career_fairs_web_banner"
         android:layout_width="wrap_content"
-        android:layout_height="22.86dp"
-        android:layout_marginStart="21.04dp"
-        android:layout_marginTop="17.66dp"
-        android:layout_marginRight="357.76dp"
-        android:layout_marginBottom="766.48dp"
+        android:layout_height="163dp"
+        android:layout_gravity="top|start"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="57dp"
+        android:contentDescription="event_poster"
         android:scaleType="centerInside"
-        android:src="@drawable/back_less" />
+        android:src="@drawable/image_career_fairs_web_banner" />
+
+    <ImageView
+        android:id="@+id/location_pin_event_info_signup"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_gravity="top|start"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="235dp"
+        android:contentDescription="map_icon"
+        android:scaleType="centerInside"
+        android:src="@drawable/location_pin" />
+
+    <TextView
+        android:id="@+id/location234"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="235dp"
+        android:layout_gravity="top|start"
+        android:gravity="start|center_vertical"
+        android:includeFontPadding="false"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="CCIS, UofA"
+        android:textColor="#FF000000"
+        android:textSize="13sp" />
+
+    <TextView
+        android:id="@+id/event_Name2"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:layout_gravity="top|start"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="315dp"
+        android:gravity="start|center_vertical"
+        android:includeFontPadding="false"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="event_name"
+        android:textColor="#FF000000"
+        android:textSize="13sp" />
+
+    <TextView
+        android:id="@+id/event_nametitle"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:layout_gravity="top|start"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="300dp"
+        android:gravity="start|center_vertical"
+        android:includeFontPadding="false"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="Event Name:"
+        android:textColor="#FF000000"
+        android:textSize="13sp"
+        android:textStyle="bold|italic" />
+
+    <TextView
+        android:id="@+id/orgname33"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:layout_gravity="top|start"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="340dp"
+        android:gravity="start|center_vertical"
+        android:includeFontPadding="false"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="Organization:"
+        android:textColor="#FF000000"
+        android:textStyle="bold|italic"
+        android:textSize="13sp" />
+    <TextView
+        android:id="@+id/orgdata"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:layout_gravity="top|start"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="355dp"
+        android:gravity="start|center_vertical"
+        android:includeFontPadding="false"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="Organization:"
+        android:textColor="#FF000000"
+
+        android:textSize="13sp" />
+
+    <TextView
+        android:id="@+id/attendeecnt"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:layout_gravity="top|start"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="375dp"
+        android:gravity="start|center_vertical"
+        android:includeFontPadding="false"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="Max Attendees:"
+        android:textStyle="bold|italic"
+        android:textColor="#FF000000"
+        android:textSize="13sp" />
+    <TextView
+        android:id="@+id/attendeecntdata"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:layout_gravity="top|start"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="389dp"
+        android:gravity="start|center_vertical"
+        android:includeFontPadding="false"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="Max Attendees:"
+        android:textColor="#FF000000"
+        android:textSize="13sp" />
+
+    <TextView
+        android:id="@+id/event_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|start"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="267dp"
+        android:gravity="start|center_vertical"
+        android:includeFontPadding="false"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="Date:"
+        android:textColor="#FF000000"
+        android:textSize="13sp"
+        android:textStyle="bold|italic" />
+    <TextView
+        android:id="@+id/event_datedata234"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:layout_gravity="top|start"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="281dp"
+        android:gravity="start|center_vertical"
+        android:includeFontPadding="false"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="date_time"
+        android:textColor="#FF000000"
+        android:textSize="13sp"
+        />
+
+    <TextView
+        android:id="@+id/text_event_info"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:layout_gravity="top|start"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="418dp"
+        android:gravity="start|center_vertical"
+        android:includeFontPadding="false"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="Event Info:"
+        android:textColor="#FF000000"
+        android:textStyle="bold|italic"
+        android:textSize="13sp" />
+
+    <FrameLayout
+        android:layout_width="360dp"
+        android:layout_height="160dp"
+        android:layout_gravity="top|start"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="441dp"
+        android:background="@drawable/drawable_shape">
+
+        <TextView
+            android:id="@+id/continer_event_summary_date_icon1"
+            android:layout_width="360dp"
+            android:layout_height="160dp"
+            android:layout_gravity="bottom|start"
+            android:gravity="start|top"
+            android:includeFontPadding="false"
+            android:lineHeight="19sp"
+            android:text="CCIS is holding a new event, exiciting"
+            android:textColor="#FF000000"
+            android:textSize="15sp" />
+    </FrameLayout>
+
+    <RelativeLayout
+        android:id="@+id/red_del_button"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="620dp"
+        android:gravity="center">
+        <View
+            android:id="@+id/red_del_button_rect"
+            android:layout_width="205dp"
+            android:layout_height="27dp"
+            android:layout_marginStart="-1dp"
+            android:layout_marginTop="-1dp"
+            android:background = "#FF0000" />
+
+        <TextView
+            android:id="@+id/deletebutton"
+            android:layout_width="205dp"
+            android:layout_height="wrap_content"
+            android:shadowColor="#000000"
+            android:shadowDx="0"
+            android:shadowDy="4"
+            android:shadowRadius="4"
+            android:text="Delete_Event"
+            android:textAlignment="center"
+            android:textColor="@color/_bg__create_event_ek2_color"
+            android:textSize="16.02sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
     <ImageView
         android:id="@+id/bottom_actionbar"
         android:layout_width="395dp"
         android:layout_height="74dp"
         android:layout_gravity="top|start"
+        android:layout_marginStart="-2dp"
+        android:layout_marginTop="682dp"
         android:background="@drawable/bottom_actionbar"
-        android:scaleType="centerInside"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="660dp" />
+        android:scaleType="centerInside" />
 
-    <!--  TODO: Figure out a way to replace show list icon, with the white one to show current tab -->
     <ImageView
-        android:id="@+id/profile_attendee"
+        android:id="@+id/attendees_admin_browse_event"
         android:layout_width="38dp"
         android:layout_height="38dp"
-        android:contentDescription="Button to view attendee's projile"
+        android:layout_marginStart="52.38dp"
+        android:layout_marginTop="700dp"
+        android:layout_marginEnd="314.43dp"
+        android:layout_marginBottom="30.81dp"
         android:scaleType="centerInside"
-        android:src="@drawable/profile"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="298dp" />
+        android:src="@drawable/profile" />
 
     <ImageView
         android:id="@+id/home_admin_browse_attendee"
         android:layout_width="38dp"
         android:layout_height="38dp"
-        android:contentDescription="Button to scan a QR using the camera"
+        android:layout_marginStart="172dp"
+        android:layout_marginTop="700dp"
         android:scaleType="centerInside"
-        android:src="@drawable/home"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="168dp" />
+        android:src="@drawable/home"/>
 
     <ImageView
         android:id="@+id/event_list"
         android:layout_width="38dp"
-        android:layout_height="wrap_content"
-        android:contentDescription="Button to show a list "
+        android:layout_height="38dp"
+        android:layout_marginStart="300dp"
+        android:layout_marginTop="700dp"
+        android:layout_marginBottom="0.05dp"
         android:scaleType="centerInside"
-        android:src="@drawable/event_list"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="64dp" />
+        android:src="@drawable/event_list" />
 
-    <TextView
-        android:id="@+id/admin_event_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/container_frame13"
-        app:layout_constraintVertical_bias="0.205" />
-
-    <Button
-        android:id="@+id/deletebutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delete"
-        app:layout_constraintBottom_toBottomOf="@+id/bottom_actionbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/continer_event_summary_date_icon1"
-        app:layout_constraintVertical_bias="0.406" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
