--- a/andriodApp/app/src/main/res/layout/admin_view_profile.xml
+++ b/andriodApp/app/src/main/res/layout/admin_view_profile.xml
@@ -60,7 +60,7 @@
                         android:layout_marginStart="0dp"
                         android:layout_marginTop="0dp"
                         android:contentDescription="back_button"
-                        android:src="@drawable/vector" />
+                        android:src="@drawable/back_less" />
 
                     <TextView
                         android:id="@+id/view_profile_header"
