--- a/andriodApp/app/src/main/res/layout/user_edit_profile.xml
+++ b/andriodApp/app/src/main/res/layout/user_edit_profile.xml
@@ -59,7 +59,7 @@
                         android:layout_marginStart="0dp"
                         android:layout_marginTop="0dp"
                         android:contentDescription="back_button"
-                        android:src="@drawable/vector" />
+                        android:src="@drawable/back_less" />
 
                     <TextView
                         android:id="@+id/edit_profile_text"
