made some changes to UI, and updated pngs to xmls

--- a/andriodApp/app/src/main/res/layout/attendees_browse_events.xml
+++ b/andriodApp/app/src/main/res/layout/attendees_browse_events.xml
@@ -82,5 +82,5 @@
       android:layout_marginBottom="0.05dp"
       android:contentDescription="Button to show a list "
       android:scaleType="centerInside"
-      android:src="@drawable/event_list" />
+      android:src="@drawable/event_list_black" />
 </FrameLayout>
