--- a/andriodApp/app/src/main/res/layout/attendee_event_info_sign_up.xml
+++ b/andriodApp/app/src/main/res/layout/attendee_event_info_sign_up.xml
@@ -161,6 +161,6 @@
       android:layout_marginTop="700dp"
       android:layout_marginBottom="0.05dp"
       android:scaleType="centerInside"
-      android:src="@drawable/event_list" />
+      android:src="@drawable/event_list_black" />
 
 </FrameLayout>
