--- a/andriodApp/app/src/main/res/layout/create_event.xml
+++ b/andriodApp/app/src/main/res/layout/create_event.xml
@@ -14,7 +14,7 @@
 			android:background="@color/white">
 
 			<RelativeLayout
-				android:id="@+id/profile"
+				android:id="@+id/create_new_event_header"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:gravity="left"
