--- a/andriodApp/app/src/main/res/layout/user_edit_profile.xml
+++ b/andriodApp/app/src/main/res/layout/user_edit_profile.xml
@@ -48,36 +48,43 @@
                 <RelativeLayout
                     android:id="@+id/profile"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="29dp"
-                    android:layout_marginTop="27dp">
-
-                    <ImageButton
-                        android:id="@+id/back_button"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="0dp"
-                        android:contentDescription="back_button"
-                        android:src="@drawable/back_less" />
-
-                    <TextView
-                        android:id="@+id/edit_profile_text"
-                        android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <RelativeLayout
+                        android:id="@+id/edit_profile_header"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="123dp"
-                        android:layout_marginTop="2dp"
-                        android:text="Edit Profile"
-                        android:textColor="@color/_bg__profile_ek1_color"
-                        android:textSize="20.02sp"
-                        android:textStyle="bold" />
+                        android:gravity="left"
+                        tools:ignore="RtlHardcoded">
+
+                        <ImageView
+                            android:id="@+id/back_less"
+                            android:layout_width="39dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="22dp"
+                            android:layout_marginTop="24dp"
+                            android:contentDescription="@string/back_button_implemented_with_less_then"
+                            android:foregroundGravity="left|bottom"
+                            android:src="@drawable/back_less" />
+
+                        <TextView
+                            android:id="@+id/edit_profile_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginLeft="75dp"
+                            android:layout_toEndOf="@+id/back_less"
+                            android:text="Edit Profile"
+                            android:textColor="@color/black"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
+                    </RelativeLayout>
 
                     <ImageView
                         android:id="@+id/pfp_circle"
                         android:layout_width="126.14dp"
                         android:layout_height="126.14dp"
-                        android:layout_marginStart="106dp"
-                        android:layout_marginTop="46dp"
+                        android:layout_marginStart="135dp"
+                        android:layout_marginTop="75dp"
                         android:src="@drawable/ellipse_1"
                         android:contentDescription="pfp_outer_circle" />
 
@@ -85,8 +92,8 @@
                         android:id="@+id/pfp_upload_button"
                         android:layout_width="18.86dp"
                         android:layout_height="16.1dp"
-                        android:layout_marginStart="214dp"
-                        android:layout_marginTop="154dp"
+                        android:layout_marginStart="235dp"
+                        android:layout_marginTop="181dp"
                         android:contentDescription="camera_button"
                         android:src="@drawable/vector_ek1" />
 
@@ -94,8 +101,8 @@
                         android:id="@+id/vector_ek2"
                         android:layout_width="40.86dp"
                         android:layout_height="38.76dp"
-                        android:layout_marginStart="152dp"
-                        android:layout_marginTop="93dp"
+                        android:layout_marginStart="179dp"
+                        android:layout_marginTop="117dp"
                         android:src="@drawable/vector_ek2"
                         android:contentDescription="pfp_default" />
 
@@ -134,8 +141,9 @@
                             android:layout_marginStart="0dp"
                             android:layout_marginTop="29dp"
                             android:alpha="1000"
-                            android:background="@drawable/name_rectangle_shape"
-                            android:hint="John Smith"
+                            android:background="@drawable/boundary_style"
+                            android:padding="10dp"
+                            android:textColor="@color/black"                            android:hint="John Smith"
                             android:inputType="text"
                             android:visibility="visible"
                             android:importantForAutofill="no" />
@@ -168,8 +176,9 @@
                             android:layout_marginStart="0dp"
                             android:layout_marginTop="29dp"
                             android:alpha="100"
-                            android:background="@drawable/phone_rectangle_shape"
-                            android:hint="#777-777-7777"
+                            android:background="@drawable/boundary_style"
+                            android:padding="10dp"
+                            android:textColor="@color/black"                            android:hint="#777-777-7777"
                             android:inputType="phone"
                             android:importantForAutofill="no" />
 
@@ -202,10 +211,12 @@
                             android:layout_marginStart="0dp"
                             android:layout_marginTop="29dp"
                             android:alpha="100"
-                            android:background="@drawable/email_rectangle_shape"
+                            android:background="@drawable/boundary_style"
+                            android:padding="10dp"
+                            android:textColor="@color/black"
                             android:hint="name@email.com"
                             android:inputType="text|textEmailAddress"
-                            android:importantForAutofill="no" />
+                            android:importantForAutofill="no"/>
 
                     </RelativeLayout>
 
